--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ h2{
 }
 .section{
     clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% calc(100% - 50px));
-    padding: 150px 0px;
+    padding: 100px 0px;
 }
 .section, #footer-content{
     margin-top: -50px;
@@ -336,6 +336,7 @@ figure:hover{
 }
 .border{
     border: 3px solid var(--yellow);
+    box-shadow: 0px 0px 10px;
     border-radius: 30px;
     background-color: var(--lightblue);
     font-size: 16px;
@@ -404,6 +405,7 @@ input[type="submit"]{
     padding: 30px;
     border-radius: 30px;
     border: 3px solid var(--yellow);
+    box-shadow: 0px 0px 10px;
 }
 #ainfo{
     width: 60%;
