--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,8 +279,8 @@ hr{
 }
 .more{
     width: 100%;
-    text-align: right;
-    padding-right: 5%;
+    text-align: left;
+    padding-left: 5%;
 }
 .white .more a{
     color: var(--blue);
@@ -335,8 +335,7 @@ figure:hover{
     font-size: 30px;
 }
 .border{
-    border: 3px solid var(--yellow);
-    box-shadow: 0px 0px 10px;
+    border: 5px solid var(--yellow);
     border-radius: 30px;
     background-color: var(--lightblue);
     font-size: 16px;
@@ -404,8 +403,7 @@ input[type="submit"]{
     color: var(--white);
     padding: 30px;
     border-radius: 30px;
-    border: 3px solid var(--yellow);
-    box-shadow: 0px 0px 10px;
+    border: 5px solid var(--yellow);
 }
 #ainfo{
     width: 60%;
