--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,8 +279,8 @@ hr{
 }
 .more{
     width: 100%;
-    text-align: left;
-    padding-left: 5%;
+    text-align: right;
+    padding-right: 5%;
 }
 .white .more a{
     color: var(--blue);
