--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,9 +302,8 @@ figcaption{
     text-align: center;
     color: var(--blue);
     font-size: 16px;
-
 }
-figure:hover{
+figure:hover, .item:hover, .gal:hover, .player:hover{
     transform: scale(1.05);
 }
 .subs{
@@ -374,7 +373,7 @@ input, textarea{
     width: 100%;
     padding: 5px;
 }
-#con input[type="text"], #con input[type="email"]{
+#con input{
     height: 30px;
 }
 textarea{
@@ -419,7 +418,6 @@ footer{
 #footer-content{
     background-color: var(--lightblue);
     padding: 100px 10% 50px 10%;
-    height: 430px;
 }
 .footer-section{
     display: flex;
