--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body{
     --lightblue: #1D428A;
     --yellow: #FEC524;
     --darkwhite: #DEDEDE;
+    --grey: #808080;
 }
 header, footer, .section, #cover{
     width: 100%;
@@ -249,7 +250,7 @@ hr{
 .player, .item{
     width: 30%;
     background-color: var(--darkwhite);
-    box-shadow: 0px 0px 10px;
+    box-shadow: 0px 0px 10px var(--grey);
     border: 5px solid var(--darkwhite);
     border-radius: 10px;
     text-align: center;
@@ -264,7 +265,7 @@ hr{
 .gal{
     width: 30%;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px;
+    box-shadow: 0px 0px 10px var(--grey);
 }.player, .item, .gal, figure{
     margin: 30px 0px;
 }
@@ -303,7 +304,7 @@ figure{
 figure img{
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px;
+    box-shadow: 0px 0px 10px var(--grey);
 }
 figcaption{
     text-align: center;
@@ -353,6 +354,7 @@ figure, .gal, .player{
     color: var(--white);
     height: 560px;
     padding: 30px;
+    box-shadow: 0px 0px 20px var(--grey);
 }
 #info{
     width: 30%;
@@ -415,6 +417,7 @@ input[type="submit"]{
     padding: 30px;
     border-radius: 30px;
     border: 5px solid var(--yellow);
+    box-shadow: 0px 0px 20px var(--grey);
 }
 #ainfo{
     width: 60%;
