--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,9 @@ input, textarea{
     width: 100%;
     padding: 5px;
 }
+input::placeholder, textarea::placeholder{
+    font-family: 'Poppins', sans-serif;
+}
 #con input{
     height: 30px;
 }
