--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ body{
     --lightblue: #1D428A;
     --yellow: #FEC524;
     --darkwhite: #DEDEDE;
-    --grey: #808080;
 }
 header, footer, .section, #cover{
     width: 100%;
@@ -250,7 +249,7 @@ hr{
 .player, .item{
     width: 30%;
     background-color: var(--darkwhite);
-    box-shadow: 0px 0px 10px var(--grey);
+    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.54);
     border: 5px solid var(--darkwhite);
     border-radius: 10px;
     text-align: center;
@@ -265,7 +264,7 @@ hr{
 .gal{
     width: 30%;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px var(--grey);
+    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.54);
 }.player, .item, .gal, figure{
     margin: 30px 0px;
 }
@@ -304,7 +303,7 @@ figure{
 figure img{
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px var(--grey);
+    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.54);
 }
 figcaption{
     text-align: center;
@@ -354,7 +353,7 @@ figure, .gal, .player{
     color: var(--white);
     height: 560px;
     padding: 30px;
-    box-shadow: 0px 0px 20px var(--grey);
+    box-shadow: 0px 0px 20px 20px rgba(0,0,0,0.54);
 }
 #info{
     width: 30%;
@@ -420,7 +419,7 @@ input[type="submit"]{
     padding: 30px;
     border-radius: 30px;
     border: 5px solid var(--yellow);
-    box-shadow: 0px 0px 20px var(--grey);
+    box-shadow: 0px 0px 20px 20px rgba(0,0,0,0.54);
 }
 #ainfo{
     width: 60%;
