--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,13 +34,16 @@ i{
 h2, h3{
     font-weight: bold;
 }
-input, textarea{
+input[type="text"], input[type="email"], textarea{
     background-color: var(--white);
     border-radius: 5px;
-    outline: none;
+    outline: 2px solid transparent;
     border: none;
     font-size: 16px;
     font-weight: normal;
+}
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus{
+    outline: 2px solid var(--yellow);
 }
 #back{
     width: 60px;
