--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,7 @@ hr{
     box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.5);
     transform: scale(1.05);
     transition-duration: 0.5s;
+}
 .item a{
     padding: 10px;
     width: 40%;
