--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,7 @@ hr{
     box-shadow: 0px 0px 0px;
     transform: scale(1);
     transition-duration: 0.5s;
+    cursor: zoom-in;
 }
 .player:hover, .gal:hover, figure img:hover{
     box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.5);
@@ -364,8 +365,8 @@ figcaption{
 .subs a{
     border-radius: 10px;
     padding: 10px 20px;
-    background-color: var(--blue);
-    color: var(--white);
+    background-color: var(--white);
+    color: var(--blue);
 }
 .subs a:hover, #logo a:hover, .flogo a:hover, .item a:hover, input[type="submit"]:hover{
     filter: brightness(70%);
@@ -382,6 +383,7 @@ figcaption{
 #conaut{
     justify-content: space-evenly;
     align-items: flex-start;
+    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.5);
 }
 input::placeholder, textarea::placeholder{
     font-family: 'Poppins', sans-serif;
@@ -428,6 +430,9 @@ textarea{
     color: var(--white);
     cursor: pointer;
     margin: 0px auto;
+    border: none;
+    outline: none;
+    font-weight: bold;
 }
 #lihead{
     font-size: 24px;
