--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,6 +383,9 @@ figcaption{
 #conaut{
     justify-content: space-evenly;
     align-items: flex-start;
+    background-color: var(--darkwhite);
+    padding: 2%;
+    border-radius: 20px;
 }
 input::placeholder, textarea::placeholder{
     font-family: 'Poppins', sans-serif;
@@ -406,8 +409,6 @@ input::placeholder, textarea::placeholder{
     width: 60%;
     padding: 2%;
     border-radius: 20px;
-    background-color: var(--darkwhite);
-    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.5);
 }
 #con input, #con textarea{
     width: 100%;
@@ -441,8 +442,6 @@ textarea{
 }
 #conaut img{
     height: 400px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.5);
 }
 #ainfo{
     width: 25%;
